--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,9 +22,6 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
@@ -56,6 +53,10 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 @media (prefers-color-scheme: light) {
