--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,7 +69,9 @@ button:focus-visible {
   color: whitesmoke;
 }
 
-
+.MuiFormLabel-root.MuiInputLabel-root.MuiInputLabel-formControl.MuiInputLabel-animated.MuiInputLabel-shrink.MuiInputLabel-sizeMedium.MuiInputLabel-outlined.MuiFormLabel-colorPrimary.MuiFormLabel-filled.MuiInputLabel-root.MuiInputLabel-formControl.MuiInputLabel-animated.MuiInputLabel-shrink.MuiInputLabel-sizeMedium.MuiInputLabel-outlined.css-1jy569b-MuiFormLabel-root-MuiInputLabel-root {
+  color: whitesmoke;
+}
 
 *::-webkit-scrollbar {
   display: none;
