--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,6 +77,12 @@ button:focus-visible {
   display: none;
 }
 
+.no-spiner::-webkit-outer-spin-button,
+.no-spiner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
