--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -85,6 +85,15 @@ button:focus-visible {
   cursor: pointer;
 }
 
+.fullh {
+  height: calc(100vh - 75px);
+  max-height: calc(100vh - 75px);
+}
+
+.minfullh {
+  min-height: calc(100vh - 75px);
+}
+
 *::-webkit-scrollbar {
   display: none;
 }
